<resources>
    <string name="app_name">testApp</string>

    <!-- Strings for activity_main xml -->
    <string name="name">Enter your name</string>
    <string name="password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">Not an existing user. New User?</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Strings for activity_dashboard xml -->
    <string name="welcome_user">Welcome to Test Application</string>

    <!-- Strings for activity_sign_up xml -->
    <string name="confirm_password">Confirm your password</string>
    <string name="email_address">Enter email address</string>
    <string name="mobile_no">Enter mobile no</string>
    <string name="register">Create an Account</string>

</resources>
